# CAP-CDTS

./: .env.example  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md
.github/workflows/: release.yml
2.0/: cap-ui.css  cap-ui.js  create_report.html  gpio.html  index.html  login.html  passcode.html  people.html  report.html  reports.html  switches.html  update.html  wake.html
data/: store.example.json
deploy/: cap-cdts.service
src/: auth.rs  main.rs  models.rs  store.rs  update.rs
static/: index.html
tools/: rebuild.py
