[package]
name = "rfid-cyberdeck-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Beautiful cyberpunk RFID reader/writer for Raspberry Pi Zero + RC522, with HTML frontend, pure Rust backend, and one-click self-updater from GitHub releases."
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
self_update = "0.39"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
